test/scc/expr/semantic-errors/129.t
void test()
{
    int a = { [0] = 0 };
}